--- a/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
+++ b/ymate-archetype-module/src/main/resources/archetype-resources/__rootArtifactId__-starter/pom.xml
@@ -107,6 +107,7 @@
                             <goal>single</goal>
                         </goals>
                         <configuration>
+                            <finalName>${artifactId}-${envId}-${version}</finalName>
                             <tarLongFileMode>gnu</tarLongFileMode>
                         </configuration>
                     </execution>
